# ai-gateway-k8s

./: README.md  kind-config.yaml
k8s/ai-gateway/: ai-gateway-route.yaml  gateway.yaml
k8s/backend/: vllm-qwen.yaml  vllm-smol.yaml
k8s/inference-pool/pool-qwen/: epp-config.yaml  epp-deployment.yaml  epp-rbac.yaml  inference-objective.yaml  inference-pool.yaml
k8s/inference-pool/pool-smol/: epp-config.yaml  epp-deployment.yaml  epp-rbac.yaml  inference-objective.yaml  inference-pool.yaml
k8s/inference-pool/qwen/: epp-deployment.yaml  epp-rbac.yaml  inference-objective.yaml
k8s/mock-vllm/: scenario1-latency.yaml  scenario2-kvcache.yaml  scenario3-queue.yaml  service.yaml
k8s/monitoring/: epp-routing-dashboard.yaml  grafana.yaml  inference-extension-dashboard.yaml  prometheus-scrape-config.yaml  prometheus.yaml  vllm-dashboard.yaml
k8s/monitoring/dashboards/: epp-routing.json
mock-vllm/: Dockerfile  pyproject.toml
mock-vllm/app/: __init__.py  config.py  main.py  metrics.py
mock-vllm/app/handlers/: __init__.py  chat.py  health.py  models.py
scripts/: 01-setup-cluster.sh  02-install-envoy-gateway.sh  02-install-gateway-api.sh  02-install-monitoring.sh  03-install-ai-gateway.sh  03-install-envoy-gateway.sh  04-deploy-all.sh  04-install-ai-gateway.sh  05-deploy-all.sh  99-cleanup.sh
test/: load-test.sh  smart-routing-test.sh  test-api.sh  test-mock-scenarios.sh  verify-epp-routing.sh
